# data-resident-evil

./: .dockerignore  .gitignore  Dockerfile.frontend  README.md  app.py  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt  teste.ipynb
assets/icons/: docker.avif
config_airflow/: airflow.Dockerfile
data/: average_by_blood_type.parquet  blood_type_distribution.parquet  characters_exploded.parquet  top_10_appearances.parquet  top_10_characters_with_most_appearances.parquet
data/gold_persist/: characters_exploded.parquet
docs/: architecture.drawio  draw-residenevil.excalidraw
frontend/: Dockerfile  app.py
frontend/components/: footer.py  input_css.py
frontend/configs/: settings_page.py
frontend/resources/: readFile.py
notebook/: analyze_data.ipynb  analyze_data_bronze.ipynb  visualize_data_gold.ipynb  visualize_data_silver.ipynb
resident_evil_request/: collect.py
src/: Dockerfile  bronze.py  gold.py  main.py  raw.py  requirements.txt  schemas.py  silver.py  test.py  test_minio.py
src/airflow/dags/: bronze.py  gold.py  resident_evil_ingestion.py  silver.py
src/airflow/dags/scrapy/: collect.py  paramns.py
src/airflow/dags/tools/: rules_gold.py  transform.py
src/database/: database.py
src/models/: models.py
src/resources/: boto3_manager.py  minio_manager.py
src/schemas/: test.py
src/scrapy/: collect.py  paramns.py
src/tools/: rules_gold.py  transform.py
tests/: test_get_links.py  test_write_json.py
