[tool.poetry]
name = "data-collect-teomewhy"
version = "0.1.0"
description = ""
authors = ["Bruno Augusto <120321738+imbrunoagc@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.4"
pandas = "^2.2.3"
requests = "^2.32.3"
scrapy = "^2.11.2"
beautifulsoup4 = "^4.12.3"
ipykernel = "^6.29.5"
tqdm = "^4.66.5"
pytest = "^8.3.3"
pydantic = "^2.9.2"
sqlalchemy = "^2.0.35"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
