[tool.poetry]
name = "data-collect-teomewhy"
version = "0.1.0"
description = ""
authors = ["Bruno Augusto <brunoaugusto864@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.2"
pandas = "^2.2.3"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
tqdm = "^4.66.5"
pyarrow = "^18.0.0"
boto3 = "^1.35.57"
matplotlib = "^3.9.2"
streamlit = "^1.40.1"
plotly = "^5.24.1"
fake-useragent = "^2.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
python-dotenv = "^1.0.1"
pytest = "^8.3.3"
ipykernel = "^6.29.5"
taskipy = "^1.14.0"

[tool.ruff]
line-length = 79
ignore = [
    "E501", # Line too long
    #"E402", # Module level import not at top of cell
]

[tool.ruff.lint]
select = ["I", "F", "E", "W", "PL", "PT", "B"] # Rules mandatory

[tool.ruff.format]
quote-style = 'single' # formatar todas as aspas duplas para aspas simples

[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"